--- a/src/app/components/reset-password/reset-password.component.html
+++ b/src/app/components/reset-password/reset-password.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="!resetDone; else elseTemplate">
-  <form [formGroup]="resetForm" (ngSubmit)="onSubmit()">
+  <form [formGroup]="resetForm" class="wrapper" (ngSubmit)="onSubmit()">
     <div class="inputGroup">
       <label for="email">E-mail</label>
       <input type="email" name="email" formControlName="email">
