--- a/src/app/components/admin-companies/admin-companies.component.html
+++ b/src/app/components/admin-companies/admin-companies.component.html
@@ -14,7 +14,7 @@
 </div>
 
 
-<form [formGroup]="companyForm" (ngSubmit)="onSubmit()">
+<form [formGroup]="companyForm" class="wrapper" (ngSubmit)="onSubmit()">
   <div class="inputGroup">
     <label for="name">Bedrijfsnaam</label>
     <input type="text" name="name" formControlName="name">
