--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+<form [formGroup]="loginForm" class="wrapper" (ngSubmit)="onSubmit()">
   <div class="inputGroup">
     <label for="email">E-mail</label>
     <input type="email" name="email" formControlName="email">
