--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+<form [formGroup]="registerForm" class="wrapper" (ngSubmit)="onSubmit()">
   <div class="inputGroup">
     <label for="password">Wachtwoord</label>
     <input type="password" name="password" formControlName="password">
