--- a/src/app/components/single-project/single-project.component.html
+++ b/src/app/components/single-project/single-project.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="singleProjectService.projectForm" [ngClass]="singleProjectService.projectForm.value.status">
+<form [formGroup]="singleProjectService.projectForm" class="wrapper" [ngClass]="singleProjectService.projectForm.value.status">
   <div class="projectSection">
       <div class="projectRow space-between">
         <app-single-project-controls [projectForm]="singleProjectService.projectForm" [projectId]="singleProjectService.projectId" class="left controls"></app-single-project-controls>
