--- a/src/app/components/single-project-row/single-project-row.component.scss
+++ b/src/app/components/single-project-row/single-project-row.component.scss
@@ -1,2 +1,19 @@
 @import 'variables';
 @import 'forms';
+
+
+.company,
+.EpbReporter,
+.dateCreated {
+    padding: 0;
+
+    label {
+        width: inherit;
+        min-width: inherit;
+        padding-right: inherit;
+    }
+
+    .inputField {
+        flex-grow: 0;
+    }
+}
