--- a/src/app/components/single-project/single-project.component.html
+++ b/src/app/components/single-project/single-project.component.html
@@ -6,7 +6,7 @@
           <app-single-project-row label="Contactpersoon binnen" field="company" type="select" [dataSource]="companyService.companies" valueKey="_id">
           </app-single-project-row>
 
-          <app-single-project-row label=":" field="EpbReporter" type="select" [dataSource]="userService.users" valueKey="_id">
+          <app-single-project-row label=":" field="EpbReporter" type="select" [dataSource]="userService.users | filterUsers:singleProjectService.projectForm.value.company" valueKey="_id">
           </app-single-project-row>
         </div>
       </div>
