--- a/src/app/components/single-project-row/single-project-row.component.html
+++ b/src/app/components/single-project-row/single-project-row.component.html
@@ -3,7 +3,7 @@
         <label [for]="field"><span [innerHTML]='label'></span>&nbsp;<span *ngIf="singleProjectService.projectForm.controls[field].validator !== null">*</span></label>
         <div class="inputField">
             <div class="read" (click)="changeEditState(field, true)" [ngClass]="{'empty': isEmpty(field)}"
-                *ngIf="!singleProjectService.projectEditStates[field]">
+                *ngIf="!singleProjectService.projectEditStates[field] || readOnly">
                 <ng-container *ngIf="type === 'textarea'" [innerHTML]="formService.newlineToBr(singleProjectService.projectForm.value[field])"></ng-container>
                 <ng-container *ngIf="type !== 'textarea'">
                     <ng-container [ngSwitch]="field">
@@ -35,8 +35,7 @@
                 </ng-container>
             </div>
             
-
-            <div class="write" *ngIf="singleProjectService.projectEditStates[field]">
+            <div class="write" *ngIf="singleProjectService.projectEditStates[field] && !readOnly">
                 <ng-container *ngIf="type === 'input'">
                     <input type="text" [name]="field" [id]="field" [formControlName]="field">
                 </ng-container>
